# gaussian_qem

./: .gitignore  Cargo.toml  readme.md
src/: lib.rs  manifold.rs  parameters.rs  qem.rs  quadric.rs  sym.rs  vec.rs
